Generate all models using latest Model Generator classes.
It's good from time to time to do this task, mainly if we want to modify/improve the Model Generator.
So, here are the models up2date.